drop useless and outdated cdi-api from maven

--- a/pom.xml
+++ b/pom.xml
@@ -273,6 +273,12 @@ under the License.
         <groupId>org.eclipse.sisu</groupId>
         <artifactId>org.eclipse.sisu.plexus</artifactId>
         <version>${sisuInjectVersion}</version>
+        <exclusions>
+          <exclusion> <!-- way too easy to conflict with plugins to be in maven and leak in plugin -->
+            <groupId>javax.enterprise</groupId>
+            <artifactId>cdi-api</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.eclipse.sisu</groupId>
